<resources>
    <string name="app_name">Vibe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_text">song</string>
    <string name="song_txt">songs</string>
    <string name="album_txt">Albums</string>
    <string name="play_now_text">Playing Now</string>
    <string name="play_text">Play</string>
    <string name="shuffle_text">Shuffle</string>
    <string name="search_text">Search...</string>
    <string name="sognsNotFound_text">Songs not found?</string>
    <string name="Hidden_songs_text">Hidden Songs</string>
    <string name="select_all_text">Select all</string>
    <string name="UnHide_text">Unhide</string>
    <string name="Unhiding_text">Unhiding...</string>
    <string name="noResult_message_text"><![CDATA[No result of your Music & Albums & Playlists]]></string>
    <string name="settings_text">Settings</string>
    <string name="themes_text">Theme</string>
    <string name="equalizer_text">Equalizer</string>
    <string name="Ringtone_text">Ringtone</string>
    <string name="sleep_timer_text">Sleep timer</string>
    <string name="back_up_songs_text">Back up songs</string>
    <string name="remove_ads_text">Remove ads</string>
    <string name="playing_Time_text">Playing time</string>
    <string name="notification_text">Notification</string>
    <string name="feedbaack_text">Feedback</string>
    <string name="rate_us_text">Rate us</string>
    <string name="share_socialFy_texe">Share Socialfy</string>
    <string name="privacy_policy_texe">Privacy Policy</string>
    <string name="terms_of_ser_text">Terms of Service</string>
    <string name="about_text">About</string>
    <string name="total_playine_time_text">Total playing time with Socialfy</string>
    <string name="music_played_text">Music played</string>
    <string name="video_played_text">Video Played</string>
    <string name="soon_text">soon</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_music_control_notifications">Forground Service Notification</string>
    <string name="enable_Secondary_notifications">Secondary Notifications</string>
    <string name="about_dialog_message_text">This is The First version</string>
    <string name="about_dialog_vearsion_num_text">1.0.0(1)</string>
    <string name="about_dialog_copyright_text">2025 by Socify.</string>
    <string name="small_text">small</string>
    <string name="medium_text">medium</string>
    <string name="big_text">big</string>
    <string name="save_text">save</string>
    <string name="light_text">Light</string>
    <string name="night_text">Night</string>
    <string name="system_text">System</string>
    <string name="SONGS_text">SONGS</string>
    <string name="ALBUMS_text">ALBUMS</string>
    <string name="go_back_text">Back ?</string>
    <string name="dialog_action_changes_message">You Want To Save Theme Changes.</string>
    <string name="back_text">back</string>
    <string name="tell_us_your_problem_text">Tell us the problem</string>
    <string name="Ads_text">ADs</string>
    <string name="fileNotFound_text">File not found</string>
    <string name="filecantplay_text">File can\'t play</string>
    <string name="app_slow_text">App slow</string>
    <string name="music_stop_text">Music stop</string>
    <string name="others_text">Others</string>
    <string name="details_text">Details*</string>
    <string name="feed_back_details_hint_text">Explain what happened or suggestions.</string>
    <string name="submit_text">Submit</string>
    <string name="select_what_Ad_text">Select what Ad issues you met:</string>
    <string name="AdsFeedBack_first_checkbox_txt">Non-full screen ads can\'t be closed</string>
    <string name="AdsFeedBack_checkbox_num2_txt">Too many</string>
    <string name="AdsFeedBack_checkbox_num3_txt">Too big</string>
    <string name="AdsFeedBack_checkbox_num4_txt">Full screen ads show too long</string>
    <string name="AdsFeedBack_checkbox_num5_txt">Full screen ads unskippable</string>
    <string name="AdsFeedBack_checkbox_num6_txt">Inappropriate contents</string>
    <string name="screen_or_vedio_text">Screenshots or videos (Optional)</string>
    <string name="upLoad_file_toSolveProblem_text">Upload files to help us solve the problem</string>
    <string name="my_feedbacks_text">My Feedbacks</string>
    <string name="no_connection_message_text">Please check your networck connection.</string>
    <string name="myFeedback_thanck_user_text">Thank you for your opinions.</string>
    <string name="details_txt">Details</string>
    <string name="Replay_text">Write replay...</string>
    <string name="sub_text">Sub</string>
    <string name="me_text">Me</string>
    <string name="upDatedOn_text">"upDated on "</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="no_feed_backs_message">No feedbacks yet.</string>
    <string name="get_started_big_title">Listening music like a pro with Vibe.</string>
    <string name="get_started_small_message">Your music, your way. Explore, play, and enjoy your favorite tracks like never before. Let’s get started and turn up the volume on your day!</string>
    <string name="get_started_text">Get started</string>
    <string name="add_to_play_list_text">Add to playlist</string>
    <string name="share_text">Share</string>
    <string name="hide_text">Hide</string>
    <string name="delete_from_app_text">Delete from app</string>
    <string name="edit_tags_text">Edit tags</string>
    <string name="name_text">Name*</string>
    <string name="edit_tags_name_hint">Type in song name</string>
    <string name="artist_text">Artist*</string>
    <string name="edit_tags_artist_hint">Type in artist name</string>
    <string name="cover_text">Cover</string>
    <string name="change_text">change</string>
    <string name="hide_cureentSong_title">Hide Song!</string>
    <string name="hideSong_wraning_message">Are you sure you want hide this song.</string>
    <string name="delete_cureentSong_title">Delete Song!</string>
    <string name="delete_song_wraning_message">Are sure you want to delete this song.</string>
    <string name="current_song_edited_successful">The song has been successfully modified.</string>
    <string name="likedSongs_text">Liked songs</string>
    <string name="mostPlayedSongs_text">Most played</string>
    <string name="RecentlyPlayedSongs_text">Recently played</string>
    <string name="songs_text">songs</string>
    <string name="no_Songs_fond_text">No songs found.</string>
    <string name="new_playlist_text">New playlist</string>
    <string name="playlist_name_text">Playlist name</string>
    <string name="create_text">Create</string>
    <string name="newPlaylist_added">The new list has been added successfully.</string>
    <string name="adding_new_play_list_text">Adding new playlist...</string>
    <string name="select_playlist_song">Select playlist songs</string>
    <string name="this_PlayList_added">This playlist already exist.</string>
    <string name="create_new_playList_text">Create new playlist</string>
    <string name="no_Albums_fond_text">No albums found.</string>
    <string name="cancel_text">cancel</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="duration_text">Duration</string>
    <string name="Video_text">Video</string>
    <string name="Videos_text">Videos</string>
    <string name="videos_list">Videos List</string>
    <string name="listen_text">Listen</string>
    <string name="rotate_text">Rotate</string>
    <string name="lock_text">Lock</string>
    <string name="queue_text">Queue</string>
    <string name="unlock_text">Unlock</string>
    <string name="floating_window_text">Floating window</string>
    <string name="hide_video_text">Hide video !</string>
    <string name="delete_text">delete</string>
    <string name="delete_video_text">Delete video !</string>
    <string name="delete_video_message">Are you sure you want to delete this video.</string>
    <string name="hide_video_message">Are you sure you w ant to hide this video.</string>
    <string name="play_mode_text">Play mode</string>
    <string name="loop_one_text">Loop one</string>
    <string name="loop_all_text">Loop all</string>
    <string name="pause_after_play_text">Pause after play</string>
    <string name="video_path_text">Video path</string>
    <string name="videos_text">Videos</string>
    <string name="play_lists_text">Playlists</string>
    <string name="Songs_text">Songs</string>
    <string name="Albums_text">Albums</string>
    <string name="videos_Albums_text">Video albums</string>
    <string name="Hidden_file_text">Hidden files</string>
    <string name="hidden_songs_text">Hidden songs</string>
    <string name="hidden_video_text">Hidden video</string>
    <string name="show_text">Show</string>
    <string name="Hidden_video_text">hidden videos</string>
    <string name="confiramtion_video_changes_message">You want to save video changes.</string>
    <string name="exit_text">Exit</string>
    <string name="save_audio_chages">Save audio changes !</string>
    <string name="save_video_chages">Save video  changes !</string>
    <string name="song_path_text">Song path*</string>
    <string name="Hidden_files_text">Hidden files</string>
</resources>