<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/song_notification_backround"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <ImageView
        android:id="@+id/about_app_logo"
        android:layout_width="102dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/about_dialog_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_app_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:layout_marginTop="5dp"
        android:textColor="@color/Background"
        android:textSize="20sp"
       />
    <TextView
        android:id="@+id/about_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_dialog_app_name"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_light"
        android:text="@string/about_dialog_message_text"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
       />
    <TextView
        android:id="@+id/about_dialog_vearsion_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/about_dialog_message"
        android:fontFamily="@font/poppins_extralight"
        android:text="@string/about_dialog_vearsion_num_text"
        android:textSize="20sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/about_dialog_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/about_dialog_vearsion_num"
        android:fontFamily="@font/poppins_extralight"
        android:text="@string/about_dialog_copyright_text"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:includeFontPadding="false"
        android:drawableLeft="@drawable/copyright"
        />
</RelativeLayout>