<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:padding="10dp"
    tools:context=".Activities.Vedios.EditVideoTagsActivity">

    <ImageView
        android:id="@+id/video_edit_tag_back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:background="@drawable/items_background_selector"

        android:src="@drawable/arrow_left"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_toRightOf="@+id/video_edit_tag_back_btn"
        android:layout_alignTop="@+id/video_edit_tag_back_btn"
        android:layout_alignBottom="@+id/video_edit_tag_back_btn"
        android:text="@string/edit_tags_text"
        android:gravity="center_vertical"
        android:textColor="@color/Background"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"/>

    <ScrollView
        android:layout_width="382dp"
        android:layout_height="743dp"
        android:layout_below="@+id/video_edit_tag_back_btn"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/save_video_changes_btn"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/edit_tags_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/name_text"
                    android:textColor="@color/gray"
                    android:textSize="17sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/video_edit_tags_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_white_background"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/edit_tags_name_hint"
                    android:includeFontPadding="false"
                    android:maxLines="2"
                    android:padding="10dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/edit_tags_layout_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_tags_layout_name"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/cover_text"
                    android:textColor="@color/gray"
                    android:textSize="17sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/video_edit_tags_video_thumbnail"
                    android:layout_width="115dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/small_place_holder_image"
                    app:shapeAppearanceOverlay="@style/RoundedCorner20dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_tags_layout_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_tags_layout_cover"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/video_path_text"
                    android:textColor="@color/gray"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/video_edit_tags_path_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="left"
                    android:includeFontPadding="false"
                    android:maxLines="2"
                    android:padding="10dp" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/save_video_changes_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/enable_btns_backround"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/save_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>